Added Veräjä subtheme

--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -90,3 +90,17 @@ $spacing-unit   : $base-line-height;
     $night-highlight: #666;
     $night-content: #333333;
 
+    // ---------------------------------------------------------------------
+    // Keuruun Veräjä colors
+
+    $veraja-light-gray: #dfe2e2;
+    $veraja-dark-gray: #5a5a5a;
+    $veraja-title-blue: #859ca2;
+    $veraja-slate: #4b6569;
+    $veraja-blue-on-pale-blue: #def9ff;
+    $veraja-bright-blue: #228494;
+    $veraja-hover-blue: #3acacc;
+    $veraja-pale-blue: #43ADB8;
+    $veraja-footer-blue: #2f3e4a;
+    $veraja-off-white: #f8f8f8;
+
