--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -1541,6 +1541,149 @@ footer {
     }
 }
 
+/* !---------- Keuruun Veräjä Styles ---------- */
+
+.veraja {
+
+    body {
+        background-color: $veraja-footer-blue;
+        color: $veraja-dark-gray;
+    }
+
+    h1, #site-title a { color:#859ca2; }
+
+    input[type=submit], button, .button, .show-advanced.button { background-color: $veraja-slate; }
+
+    input[type=text], input[type=password], textarea { background-color: $veraja-light-gray; }
+
+    a {
+        &:link { color: $veraja-bright-blue; }
+        &:visited { color: $veraja-pale-blue; }
+        &:hover, &:active, &:focus { color: $veraja-hover-blue; }
+    }
+
+    header { background-color: #fff; }
+
+    nav.top {
+        background-color: $veraja-bright-blue;
+
+        li:hover a { color: #fff; }
+
+        a:link, a:visited  { color: $veraja-blue-on-pale-blue; }
+        a:active, a:hover, a:focus, a.open  { color: #fff; }
+
+        .sub-nav {
+            background-color: lighten($veraja-bright-blue, 5%);
+            li {
+                & > a:link, & > a:visited, & > a:active, & > a:hover, & > a:focus { color:#fff; }
+
+                a:focus, a:hover { background-color: rgba(0,0,0,.15); }
+            }
+        }
+    }
+
+    // #top-nav a:focus { color: #fff; }
+
+    #intro { color: #fff; }
+
+    #content,
+    #secondary-nav .current a,
+    #secondary-nav a.current,
+    .secondary-nav .current a,
+    .secondary-nav a.current,
+    .exhibit-section-nav .current a{
+        background-color: $veraja-pale-blue;
+    }
+
+    #home #content > div {
+        border-color: $veraja-slate;
+    }
+
+    #content {
+
+        & > h1 { color: #fff; }
+
+        h2 { border-color: $veraja-light-gray; }
+
+        & > div, #primary > div, #sidebar > div,
+        #advanced-search-form > div, #exhibit-pages {
+            border-color: $veraja-slate;
+        }
+
+        #primary > div, #sidebar > div { background-color: #fff; }
+
+        .pagination_previous a, .pagination_next a {
+            background-color: $veraja-slate;
+        }
+
+        .pagination {
+            color: #fff;
+
+            a:link, a:visited { color: $veraja-blue-on-pale-blue; }
+            a:hover, a:active { color: #fff; }
+        }
+
+        .pagination input[type=text] {
+            border-color: $veraja-light-gray;
+            background-color: #fff;
+        }
+
+        nav .pagination_list {
+            background-color: $veraja-bright-blue;
+        }
+
+        .items-nav, .secondary-nav,
+        #secondary-nav,
+        #outputs,
+        #exhibit-child-pages,
+        #login-links a  {
+            color: #fff;
+
+            a:link, a:visited { color: $veraja-blue-on-pale-blue; }
+            a:hover, a:active { color: #fff; }
+        }
+
+        .item-img { border-color: $veraja-light-gray; }
+
+        div.hTagcloud {
+            border: 0;
+            background-color: transparent;
+            box-shadow: transparent 0 0 0;
+        }
+    }
+
+    #search-results th { background-color: $veraja-slate; }
+
+    #search-filters, #item-filters {
+        li { background-color: $veraja-blue-on-pale-blue; }
+    }
+
+    .page #content {
+        border-color: $veraja-slate;
+    }
+
+    footer {
+        background-color: $veraja-footer-blue;
+    }
+
+    footer p {
+        color:#fff;
+    }
+
+    .exhibit-page-nav { background-color: $veraja-slate; }
+
+    .exhibit-page-nav .current, .exhibit-child-nav .current { background-color: rgba(0,0,0,.1); }
+
+    .exhibit-page-nav {
+        a:link, a:visited { color: $veraja-blue-on-pale-blue; }
+        a:hover, a:active { color: #fff; }
+    }
+
+    #exhibit-page-navigation {
+        a, span { background-color: #fff; }
+    }
+}
+
 
 /* !---------- Spring Styles ---------- */
 
